Fix features on mobile exceeding viewport

--- a/Calcium.Toolkit/Oxide/Sections/Features.razor.css
+++ b/Calcium.Toolkit/Oxide/Sections/Features.razor.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
-    min-width: 100%;
+    min-width: 200px;
     padding: 1rem 2rem;
 }
 
